@@ -196,16 +196,6 @@ has is_main_module => (
 
 #------------------------------------------------------------------------------
 
-has can_index => (
-    is       => 'ro',
-    isa      => Bool,
-    init_arg => undef,
-    default  => sub { $_[0]->is_simile },
-    lazy     => 1,
-);
-
-#------------------------------------------------------------------------------
-
 sub FOREIGNBUILDARGS {
     my ( $class, $args ) = @_;
 
@@ -271,7 +261,7 @@ sub is_simile {
     my($self) = @_;
 
     my $package = $self->name;
-    my $file = $self->file;
+    my $file    = $self->file;
 
     # Some older version of Pinto did not record the filename of each
     # package.  In that case we must assume that it is a simile.
@@ -292,6 +282,22 @@ sub is_simile {
     }
 
     return $ret;
+}
+
+#------------------------------------------------------------------------------
+
+sub can_index {
+    my ($self) = @_;
+
+    # Workaround for Net::LibIDN (see GH #194)
+    return 1 if $self->name eq 'Net::LibIDN'
+        and $self->file eq '_LibIDN.pm';
+
+    # Workaround for FCGI
+    return 1 if $self->name eq 'FCGI'
+        and $self->file eq 'FCGI.PL';
+
+    return $self->is_simile;
 }
 
 #------------------------------------------------------------------------------
