@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+      [BUG FIXES]
+
+      - Added a workaround for Net::LibIDN, which was not being properly
+      indexed.  This fixed GH #149.  Thanks @perlpunk and @malbin
+
 0.0995    2014-03-18 21:12:56 America/Los_Angeles
 
       [INCOMPATIBLE CHANGES]
